added some code to enable einstein for developers in scratch org in config>project file

--- a/LWC Components from Learnings/config/project-scratch-def.json
+++ b/LWC Components from Learnings/config/project-scratch-def.json
@@ -2,6 +2,7 @@
   "orgName": "Demo company",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
+  "features":["Communities","ServiceCloud", "EinsteinGPTForDevelopers"],
   "hasSampleData": true,
   "settings": {
     "lightningExperienceSettings": {
